#122 Fixed feedback issues

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_blogs_loop.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_blogs_loop.scss
@@ -10,8 +10,8 @@
 			@include medium-up() {
 
 				.item-block {
-					float: none;
-					width: auto;
+					// float: none;
+					//width: auto;
 				}
 
 				.item-meta {
