--- a/src/bp-templates/bp-nouveau/common-styles/_bp_filters.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_filters.scss
@@ -206,9 +206,19 @@
 		}
 	}
 
-	.subnav-filters .grid-filters {
-		float: right;
-		padding: 0;
+	@include medium-small-max() {
+
+		.subnav-filters .grid-filters {
+			margin-top: 10px;
+		}
+	}
+
+	@include medium-small-up() {
+
+		.subnav-filters .grid-filters {
+			float: right;
+			padding: 0;
+		}
 	}
 
 } // close .buddypress-wrap
