--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -791,9 +791,17 @@ body.buddypress article.page > .entry-header .entry-title {
   text-align: center;
 }
 
-.buddypress-wrap .subnav-filters .grid-filters {
-  float: left;
-  padding: 0;
+@media screen and (max-width: 32em) {
+  .buddypress-wrap .subnav-filters .grid-filters {
+    margin-top: 10px;
+  }
+}
+
+@media screen and (min-width: 32em) {
+  .buddypress-wrap .subnav-filters .grid-filters {
+    float: left;
+    padding: 0;
+  }
 }
 
 .buddypress-wrap .grid-filters {
@@ -888,7 +896,6 @@ a.layout-grid-view {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  border-top: 1px solid #eaeaea;
   clear: both;
   list-style: none;
   margin: 20px 0;
@@ -981,11 +988,6 @@ a.layout-grid-view {
   .bp-list li .item {
     margin: 0;
     overflow: hidden;
-  }
-  .bp-list li .item .item-block {
-    float: right;
-    margin-left: 2%;
-    width: 50%;
   }
   .bp-list li .item .list-title,
   .bp-list li .item .item-meta {
@@ -1764,10 +1766,6 @@ form.ac-form .ac-reply-content input {
 *----------------------------------------------------------
 */
 @media screen and (min-width: 46.8em) {
-  .buddypress-wrap .blogs-list li .item-block {
-    float: none;
-    width: auto;
-  }
   .buddypress-wrap .blogs-list li .item-meta {
     clear: right;
     float: none;
@@ -2438,6 +2436,10 @@ body.no-js .single-item-header .js-self-profile-button {
 
 .bp-user .member-header-actions * > * {
   display: block;
+}
+
+body.buddypress.bp-user #page #primary .entry-header {
+  display: none;
 }
 
 /**
@@ -3752,7 +3754,6 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   appearance: none;
   border: 0;
   cursor: pointer;
-  margin-left: -25px;
   padding: 5px 10px 5px 25px;
   position: relative;
   z-index: 1;
@@ -3768,7 +3769,9 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 .buddypress-wrap .select-wrap span.select-arrow {
   font-size: 10px;
   display: inline-block;
-  position: relative;
+  position: absolute;
+  left: 8px;
+  top: 10px;
   z-index: 0;
 }
 
@@ -3782,7 +3785,13 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 }
 
 .buddypress-wrap .subnav-filters .select-wrap {
-  margin-left: 12px;
+  position: relative;
+}
+
+@media screen and (min-width: 32em) {
+  .buddypress-wrap .subnav-filters .select-wrap {
+    margin-left: 12px;
+  }
 }
 
 .buddypress-wrap .select-wrap:focus, .buddypress-wrap .select-wrap:hover,
@@ -5066,6 +5075,7 @@ button[data-bp-close]:hover {
   position: relative;
   overflow: hidden;
   padding-top: 14px;
+  height: 100%;
 }
 
 .grid > li .list-wrap .list-title {
@@ -5088,22 +5098,11 @@ button[data-bp-close]:hover {
 }
 
 @media screen and (min-width: 24em) {
-  .grid.members-list .list-wrap {
-    min-height: 340px;
-  }
   .grid.members-list .list-wrap .item-block {
     margin: 0 auto;
-    min-height: 7rem;
   }
   .grid.members-group-list .list-wrap .item-block {
     margin: 0 auto;
-    min-height: 7rem;
-  }
-  .grid.groups-list .list-wrap {
-    min-height: 470px;
-  }
-  .grid.groups-list .list-wrap .item-block {
-    min-height: 6rem;
   }
   .grid.groups-list .list-wrap .group-desc {
     margin: 15px auto 0;
@@ -5120,12 +5119,8 @@ button[data-bp-close]:hover {
   .grid.groups-list .list-wrap .item-desc p {
     margin-bottom: 0;
   }
-  .grid.blogs-list .list-wrap {
-    min-height: 350px;
-  }
   .grid.blogs-list .list-wrap .item-block {
     margin: 0 auto;
-    min-height: 7rem;
   }
 }
 
@@ -5148,20 +5143,15 @@ button[data-bp-close]:hover {
 }
 
 @media screen and (min-width: 24em) {
-  .grid.two > li, .grid.three > li {
-    width: 50%;
+  .grid.two > li, .grid.three > li, .grid.four > li {
+    flex: 0 0 50%;
+    max-width: 50%;
   }
-  .grid.two > li:nth-child(odd), .grid.three > li:nth-child(odd) {
-    padding-left: 10px;
-  }
-  .grid.two > li:nth-child(even), .grid.three > li:nth-child(even) {
-    padding-right: 10px;
-  }
-  .grid.two > li .item, .grid.three > li .item {
+  .grid.two > li .item, .grid.three > li .item, .grid.four > li .item {
     margin: 1rem auto 0;
     width: 80%;
   }
-  .grid.two > li .item .item-title, .grid.three > li .item .item-title {
+  .grid.two > li .item .item-title, .grid.three > li .item .item-title, .grid.four > li .item .item-title {
     width: auto;
   }
 }
@@ -5170,52 +5160,31 @@ button[data-bp-close]:hover {
 @media screen and (min-width: 46.8em) {
   .grid.three > li {
     padding-top: 0;
-    width: 33.333333%;
-    width: calc(100% / 3);
-  }
-  .grid.three > li:nth-child(1n+1) {
-    padding-right: 5px;
-    padding-left: 5px;
-  }
-  .grid.three > li:nth-child(3n+3) {
-    padding-right: 5px;
-    padding-left: 0;
-  }
-  .grid.three > li:nth-child(3n+1) {
-    padding-right: 0;
-    padding-left: 5px;
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
   }
 }
 
 /* Build the four column class medium up */
 @media screen and (min-width: 46.8em) {
   .grid.four > li {
-    width: 25%;
-  }
-  .grid.four > li:nth-child(1n+1) {
-    padding-right: 5px;
-    padding-left: 5px;
-  }
-  .grid.four > li:nth-child(4n+4) {
-    padding-right: 5px;
-    padding-left: 0;
-  }
-  .grid.four > li:nth-child(4n+1) {
-    padding-right: 0;
-    padding-left: 5px;
+    flex: 0 0 25%;
+    max-width: 25%;
   }
 }
 
 .buddypress-wrap .grid.bp-list {
+  display: flex;
+  flex-flow: row wrap;
   padding-top: 1em;
+  margin-right: -5px;
+  margin-left: -5px;
 }
 
 .buddypress-wrap .grid.bp-list > li {
   border-bottom: none;
-}
-
-.buddypress-wrap .grid.bp-list > li .list-wrap {
-  padding-bottom: 3em;
+  padding: 0 5px;
+  margin-bottom: 10px;
 }
 
 .buddypress-wrap .grid.bp-list > li .item-avatar {
@@ -5246,7 +5215,6 @@ button[data-bp-close]:hover {
   right: 0;
   margin: 0 auto;
   text-align: center;
-  width: 96%;
 }
 
 @media screen and (min-width: 46.8em) {
@@ -5258,7 +5226,6 @@ button[data-bp-close]:hover {
 .buddypress-wrap .grid.bp-list > li .item .item-block,
 .buddypress-wrap .grid.bp-list > li .item .group-desc {
   float: none;
-  width: 96%;
 }
 
 .buddypress-wrap .grid.bp-list > li .item .item-block {
@@ -5282,22 +5249,9 @@ button[data-bp-close]:hover {
   display: inline;
 }
 
-.buddypress-wrap .grid.bp-list > li .action {
-  bottom: 5px;
-  float: none;
-  height: auto;
-  right: 0;
-  margin: 0;
-  padding: 0 5px;
-  position: absolute;
-  text-align: center;
-  top: auto;
-  width: 100%;
-}
-
 .buddypress-wrap .grid.bp-list > li .action .generic-button {
   float: none;
-  margin: 5px 0 0;
+  margin: 0;
   text-align: center;
   width: 100%;
 }
@@ -5317,16 +5271,6 @@ button[data-bp-close]:hover {
   min-height: 5em;
 }
 
-.buddypress-wrap .grid.three > li .group-desc,
-.buddypress-wrap .grid.four > li .group-desc {
-  min-height: 8em;
-}
-
-.buddypress-wrap .blogs-list.grid.three > li,
-.buddypress-wrap .blogs-list.grid.four > li {
-  min-height: 350px;
-}
-
 .buddypress-wrap .blogs-list.grid.three > li .last-activity,
 .buddypress-wrap .blogs-list.grid.four > li .last-activity {
   margin-bottom: 0;
@@ -5335,22 +5279,6 @@ button[data-bp-close]:hover {
 .buddypress-wrap .blogs-list.grid.three > li .last-post,
 .buddypress-wrap .blogs-list.grid.four > li .last-post {
   margin-top: 0;
-}
-
-.buddypress:not(.logged-in) .grid.bp-list .list-wrap {
-  padding-bottom: 5px;
-}
-
-.buddypress:not(.logged-in) .grid.groups-list .list-wrap {
-  min-height: 430px;
-}
-
-.buddypress:not(.logged-in) .grid.members-list .list-wrap {
-  min-height: 300px;
-}
-
-.buddypress:not(.logged-in) .grid.blogs-list .list-wrap {
-  min-height: 320px;
 }
 
 @media screen and (min-width: 46.8em) {
