--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_item_body.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_item_body.scss
@@ -13,3 +13,17 @@
 		}
 	}
 }
+
+//Subgroups list doesn't show searchbar and filter dropdown
+.single-item.subgroups {
+	.item-body {
+		#subnav-filters {
+			.subnav-search {
+				display: none;
+			}
+			#dir-filters {
+				display: none;
+			}
+		}
+	}
+}
