--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -2375,6 +2375,41 @@ body.no-js .single-item-header .js-self-profile-button {
   width: 30px;
 }
 
+.groups-header .parents-lists {
+  margin: 0 20px 0 0;
+}
+
+.groups-header .parents-lists .parents-title {
+  font-size: 14px;
+}
+
+.groups-header .parents-lists .group-list {
+  margin: 0 0 5px;
+}
+
+.groups-header .parents-lists .group-list ul:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.groups-header .parents-lists .group-list li {
+  display: inline-block;
+  float: none;
+  margin: 4px 0 0 4px;
+}
+
+.groups-header .parents-lists img.avatar {
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  float: none;
+  height: 30px;
+  margin: 0;
+  max-width: 100%;
+  width: 30px;
+}
+
 .groups-header .desc-wrap {
   background: #eaeaea;
   border: 1px solid #d6d6d6;
@@ -2406,6 +2441,8 @@ body.no-js .single-item-header .js-self-profile-button {
     margin-left: 15px;
     text-align: right;
     max-width: 25%;
+    display: flex;
+    justify-content: space-between;
   }
   .groups-header .groups-meta {
     clear: both;
