report table css

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_generic_and_typography.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_generic_and_typography.scss
@@ -205,7 +205,8 @@ body.buddypress {
 	$search-element-size: 15;
 	$search-element-button-size: $search-element-size + 5;
 
-	.bp-tables-user {
+	.bp-tables-user,
+	.bp-tables-report {
 
 		th {
 
