--- a/src/bp-templates/bp-nouveau/common-styles/_bp_tables.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_tables.scss
@@ -3,12 +3,14 @@
 .buddypress-wrap {
 
 	.bp-tables-user,
+	.bp-tables-report,
 	table.wp-profile-fields,
 	table.forum {
 		width: 100%;
 	}
 
 	.bp-tables-user,
+	.bp-tables-report,
 	table.wp-profile-fields,
 	table.forum {
 
@@ -30,6 +32,7 @@
 	}
 
 	.bp-tables-user,
+	.bp-tables-report,
 	table.wp-profile-fields,
 	table.forum {
 
@@ -44,6 +47,7 @@
 	}
 
 	.bp-tables-user,
+	.bp-tables-report,
 	table.wp-profile-fields,
 	table.forum {
 
@@ -58,6 +62,7 @@
 	}
 
 	.bp-tables-user,
+	.bp-tables-report,
 	table.wp-profile-fields, {
 
 		tr.alt {
