--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -3303,6 +3303,8 @@ body.register .buddypress-wrap .page ul {
 #message-threads li .thread-avatar img.avatar {
   float: right;
   margin: 5px 0 0 10px;
+  max-width: 80px;
+  width: 80%;
 }
 
 .bp-messages-content .actions {
