--- a/src/bp-templates/bp-nouveau/common-styles/_bp_group_header.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_group_header.scss
@@ -50,11 +50,11 @@
 		}
 	} // close moderators-lists
 
-	.parents-lists {
+	.parent-list {
 		padding: 0 1em 0 0;
 		display: table-cell;
 
-		.parents-title {
+		.parent-title {
 
 			@include font-size(14);
 		}
