--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -3520,6 +3520,11 @@ input#send-to-input {
   color: #333;
 }
 
+.single.messages.view .bp-messages-filters,
+.single.messages.view .bp-messages-threads-list {
+  display: none;
+}
+
 /**
 *------------------------------------------
 * @subsection 5.2.2.6 - Settings
