--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -278,6 +278,10 @@ TABLE OF CONTENTS:
 	content: "\f325";
 }
 
+.buddyboss_page_bp-components tr.invites td.plugin-title span:before {
+	content: "\f465";
+}
+
 .buddyboss_page_bp-components tr.forums td.plugin-title span:before {
 	content: "\f175";
 }
