message inbox avatars

--- a/src/bp-templates/bp-nouveau/sass/_nouveau_messages.scss
+++ b/src/bp-templates/bp-nouveau/sass/_nouveau_messages.scss
@@ -192,9 +192,9 @@
 
 			img.avatar {
 				float: left;
-				margin: 5px 10px 0 0;
-				max-width: 80px;
-				width: 80%;
+				margin: 0 10px 0 0;
+				max-width: 50px;
+				width: 100%;
 			}
 		}
 
