--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -3520,6 +3520,32 @@ input#send-to-input {
   color: #333;
 }
 
+#send_message_form .select2-selection--multiple {
+  border: 0;
+}
+
+#send_message_form .select2-selection__rendered {
+  display: flex;
+  flex-flow: row wrap;
+  padding: 0;
+}
+
+#send_message_form .select2-search.select2-search--inline {
+  flex: 0 0 100%;
+}
+
+#send_message_form .select2-search__field {
+  width: 100% !important;
+}
+
+.bp-messages-content #bp-message-content {
+  margin-top: 20px;
+}
+
+.messages .select2-dropdown {
+  border-color: #d6d6d6;
+}
+
 /**
 *------------------------------------------
 * @subsection 5.2.2.6 - Settings
