--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3521,21 +3521,32 @@ input#send-to-input {
 }
 
 #send_message_form .select2-selection--multiple {
-  border: 0;
+  border-color: #d6d6d6;
+  padding: 3px 5px;
 }
 
 #send_message_form .select2-selection__rendered {
   display: flex;
+  align-items: center;
   flex-flow: row wrap;
   padding: 0;
 }
 
 #send_message_form .select2-search.select2-search--inline {
-  flex: 0 0 100%;
+  flex: 1;
+}
+
+#send_message_form .select2-selection__rendered li {
+  margin: 5px;
 }
 
 #send_message_form .select2-search__field {
-  width: 100% !important;
+  min-width: 120px;
+  height: 30px;
+  margin: 0;
+  border: 0;
+  background: transparent;
+  padding: 0 5px;
 }
 
 .bp-messages-content #bp-message-content {
