--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3097,36 +3097,6 @@ body.register .buddypress-wrap .page ul {
 * @subsection 5.2.2.5 - Private Messaging
 *-------------------------------------------
 */
-.message-action-star:before,
-.message-action-unstar:before,
-.message-action-view:before,
-.message-action-delete:before {
-  font-family: dashicons;
-  font-size: 18px;
-}
-
-.message-action-star:before {
-  color: #aaa;
-  content: "\f154";
-}
-
-.message-action-unstar:before {
-  color: #fcdd77;
-  content: "\f155";
-}
-
-.message-action-view:before {
-  content: "\f473";
-}
-
-.message-action-delete:before {
-  content: "\f182";
-}
-
-.message-action-delete:hover:before {
-  color: #a00;
-}
-
 .preview-content .actions a {
   text-decoration: none;
 }
@@ -3525,6 +3495,7 @@ input#send-to-input {
   display: none;
 }
 
+.messages.compose .bp-messages-filters,
 .messages.compose .bp-messages-threads-list {
   display: none;
 }
