--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -279,7 +279,7 @@ TABLE OF CONTENTS:
 }
 
 .buddyboss_page_bp-components tr.invites td.plugin-title span:before {
-	content: "\f466"
+	content: "\f465";
 }
 
 .buddyboss_page_bp-components tr.forums td.plugin-title span:before {
