--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -17,6 +17,7 @@ TABLE OF CONTENTS:
 	2.2 Settings - Components
 	2.3 Tools
 	2.4 Tooltips
+	2.5 Settings - Tabs
 3.0 Users
 	3.1 Users List
 	3.2 Site Notices
@@ -393,9 +394,21 @@ TABLE OF CONTENTS:
 	z-index: 999;
 }
 
-/*------------------------------------------------------------------------------
- * 3.0 Users
- *----------------------------------------------------------------------------*/
+/*
+ * 2.5 Settings - Tabs
+ */
+tr.bp-search-child-field,
+tr.bp-search-child-field th {
+	padding: 0;
+}
+
+tr.bp-search-child-field td {
+	padding: 0.5em 2.5em;
+}
+
+	/*------------------------------------------------------------------------------
+	 * 3.0 Users
+	 *----------------------------------------------------------------------------*/
 
 /*
  * 3.1 Users List
