--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -4607,18 +4607,25 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   line-height: inherit;
 }
 
-a[data-bp-close] span:before,
-button[data-bp-close] span:before {
-  font-size: 32px;
+a[data-bp-close] span,
+button[data-bp-close] span {
+  font-size: 24px;
 }
 
-a[data-bp-close],
-button[data-bp-close] {
+.buddypress .buddypress-wrap a[data-bp-close],
+.buddypress .buddypress-wrap button[data-bp-close] {
   border: 0;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  width: 32px;
+  padding: 0;
+  height: auto;
+  margin-bottom: auto;
+  margin-top: 10px;
+  margin-right: 12px;
+}
+
+.buddypress .buddypress-wrap a[data-bp-close]:hover, .buddypress .buddypress-wrap a[data-bp-close]:focus,
+.buddypress .buddypress-wrap button[data-bp-close]:hover,
+.buddypress .buddypress-wrap button[data-bp-close]:focus {
+  background: transparent;
 }
 
 .bp-feedback.no-icon a[data-bp-close],
