--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -408,12 +408,12 @@ tr.bp-search-child-field td {
 
 tr.bp-search-parent-field th,
 tr.bp-search-parent-field td {
-	padding: 15px 10px 10px 0px;
+	padding: 15px 10px 10px 0;
 }
 
-	/*------------------------------------------------------------------------------
-	 * 3.0 Users
-	 *----------------------------------------------------------------------------*/
+/*
+ * 3.0 Users
+ */
 
 /*
  * 3.1 Users List
