--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3670,6 +3670,10 @@ input#send-to-input {
   height: 120px;
 }
 
+.buddypress-wrap .standard-form textarea#bp-member-invites-custom-subject {
+	height: 48px;
+}
+
 .buddypress-wrap .standard-form textarea#message_content {
   height: 200px;
 }
