#47 Moderation > Update group header button style

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_group_header.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_group_header.scss
@@ -11,6 +11,10 @@
 		clear: both;
 	}
 
+	.action .button {
+		margin-right: 10px;
+	}
+
 	// The admin & mod list display for a group.
 	// 'moderators-lists' is used to refer to
 	// generic members with elevated access.
