--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -403,12 +403,20 @@ tr.bp-search-child-field th {
 }
 
 tr.bp-search-child-field td {
-	padding: 0.5em 2.5em;
+	padding: 10px 25px;
 }
 
 tr.bp-search-parent-field th,
 tr.bp-search-parent-field td {
-	padding: 15px 0 10px 10px;
+	padding: 15px 0 10px 20px;
+}
+
+tr.bp-search-parent-field td p {
+	margin-top: 0;
+}
+
+tr.bp-search-parent-field td p.section-header {
+	margin: 0 0 20px;
 }
 
 /*
