--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -408,7 +408,7 @@ tr.bp-search-child-field td {
 
 tr.bp-search-parent-field th,
 tr.bp-search-parent-field td {
-	padding: 15px 20px 10px 0px;
+	padding: 15px 20px 10px 0;
 }
 
 tr.bp-search-parent-field td p {
@@ -416,7 +416,7 @@ tr.bp-search-parent-field td p {
 }
 
 tr.bp-search-parent-field td p.section-header {
-	margin: 0 0 20px 0;
+	margin: 0 0 20px;
 }
 
 /*
