#264 LD Reports > layout implemention

--- a/src/bp-integrations/learndash/assets/styles/bp-learndash-rtl.css
+++ b/src/bp-integrations/learndash/assets/styles/bp-learndash-rtl.css
@@ -1,5 +1,5 @@
 .bp-learndash-reports-filters-form {
-	text-align: right;
+	text-align: left;
 }
 
 .bp_ld_report_table_wrapper {
@@ -50,7 +50,7 @@
 }
 
 .ld-report-user-stats .user-avatar {
-        margin-right: 15px;
+        margin-left: 15px;
 }
 
 .ld-report-user-stats .avatar {
