AppBoss admin - section 1

--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -24,7 +24,8 @@ TABLE OF CONTENTS:
 4.0 Emails - Edit page
 5.0 Tools - BuddyPress
 6.0 Plugins page
-7.0 Miscellaneous
+7.0 AppBoss page
+8.0 Miscellaneous
 ------------------------------------------------------------------------------*/
 
 /*------------------------------------------------------------------------------
@@ -578,7 +579,116 @@ body.post-type-bp-email .categorydiv label {
 
 
 /*------------------------------------------------------------------------------
- * 7.0 Miscellaneous
+ * 7.0 AppBoss page
+ *----------------------------------------------------------------------------*/
+.wc_addons_wrap {
+    max-width: 1200px;
+}
+
+.wc_addons_wrap .addons-featured {
+    margin: 25px 0 0;
+}
+
+.wc_addons_wrap .addons-banner-block, .wc_addons_wrap .addons-wcs-banner-block {
+    background: #fff;
+    border: 1px solid #ddd;
+    margin: 0 0 1em 0;
+    padding: 2em 2em 1em;
+}
+
+.wc_addons_wrap .addons-banner-block p {
+    margin: 0 0 20px;
+}
+
+.wc_addons_wrap .addons-banner-block-items {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 0 -10px 0 -10px;
+}
+
+.wc_addons_wrap .addons-banner-block-item {
+    border: 1px solid #e6e6e6;
+    border-radius: 3px;
+    -webkit-box-flex: 1;
+    flex: 1;
+    margin: 1em;
+    min-width: 200px;
+    width: 30%;
+}
+
+.wc_addons_wrap .addons-banner-block-item, .wc_addons_wrap .addons-column-block-item {
+    display: none;
+}
+
+.wc_addons_wrap .addons-banner-block-item:nth-child(-n+3) {
+    display: block;
+}
+
+.wc_addons_wrap .addons-banner-block-item-icon, .wc_addons_wrap .addons-column-block-item-icon {
+    -webkit-box-align: center;
+    align-items: center;
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+
+.wc_addons_wrap .addons-banner-block-item-icon {
+    background: #f7f7f7;
+    height: 143px;
+}
+
+.wc_addons_wrap .addons-banner-block img {
+    height: 62px;
+}
+
+.wc_addons_wrap .addons-banner-block-item-content {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    height: 184px;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    padding: 24px;
+}
+
+.wc_addons_wrap .addons-banner-block-item-content h3 {
+    margin-top: 0;
+}
+
+.wc_addons_wrap .addons-banner-block p {
+    margin: 0 0 20px;
+}
+
+.wc_addons_wrap .addons-banner-block-item-content p {
+    margin: 0 0 auto;
+}
+
+.wc_addons_wrap .addons-button {
+    border-radius: 3px;
+    cursor: pointer;
+    display: block;
+    height: 37px;
+    line-height: 37px;
+    text-align: center;
+    text-decoration: none;
+    width: 124px;
+}
+
+.wc_addons_wrap .addons-button-solid {
+    background-color: #955a89;
+    color: #fff;
+}
+
+/*------------------------------------------------------------------------------
+ * 8.0 Miscellaneous
  *----------------------------------------------------------------------------*/
 body.post-type-bp_ps_form .page-title-action {
 	display: none;
