--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -683,7 +683,7 @@ body.post-type-bp-email .categorydiv label {
 }
 
 .wc_addons_wrap .addons-button-solid {
-    background-color: #955a89;
+    background-color: #00AAE1;
     color: #fff;
 }
 
