--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -621,8 +621,24 @@ body.post-type-bp-email .categorydiv label {
     width: 30%;
 }
 
+.wc_addons_wrap .addons-column-block-item {
+    border-top: 2px solid #f9f9f9;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    flex-direction: row;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    margin: 0 -20px;
+    padding: 20px;
+}
+
 .wc_addons_wrap .addons-banner-block-item, .wc_addons_wrap .addons-column-block-item {
     display: none;
+}
+
+.wc_addons_wrap .addons-column-block-item:nth-of-type(-n+3) {
+	display: flex;
 }
 
 .wc_addons_wrap .addons-banner-block-item:nth-child(-n+3) {
@@ -669,6 +685,44 @@ body.post-type-bp-email .categorydiv label {
 
 .wc_addons_wrap .addons-banner-block-item-content p {
     margin: 0 0 auto;
+}
+
+.wc_addons_wrap .addons-column-block-item-icon {
+    background: #f7f7f7;
+    border: 1px solid #e6e6e6;
+    height: 100px;
+    margin: 0 10px 10px 0;
+    width: 100px;
+}
+
+.wc_addons_wrap .addons-column-block img {
+    max-height: 50px;
+    max-width: 50px;
+}
+
+.wc_addons_wrap .addons-column-block-item-content {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-flex: 1;
+    flex: 1;
+    flex-wrap: wrap;
+    height: 20%;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    min-width: 200px;
+}
+
+.wc_addons_wrap .addons-column-block-item-content h2 {
+    float: left;
+    margin-top: 8px;
+}
+
+.wc_addons_wrap .addons-column-block-item-content a {
+    float: right;
+}
+
+.wc_addons_wrap .addons-column-block-item-content p {
+    float: left;
 }
 
 .wc_addons_wrap .addons-button {
